# leanCLR-godot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
managed/GodotSharpCompat/: CallableDelegateRegistry.cs  ExportAttribute.cs  GD.cs  GodotObject.cs  GodotSharpCompat.csproj  NativeCalls.cs  Node.cs
project/: Game.csproj  LeanCLRGodot.sln  export_presets.cfg  icon.svg.import  leanclr.gdextension  leanclr.gdextension.uid  main.gd  main.gd.uid  main.tscn  project.godot  runtime_csharp_editor.tscn  runtime_hot_reload_demo.tscn
project/scripts/: ClassDbMain.cs  ClassDbMain.cs.uid  HotReloadInputRelay.gd  HotReloadInputRelay.gd.uid  HotReloadSmoke.cs  HotReloadSmoke.cs.uid  RuntimeCSharpEditor.gd  RuntimeCSharpEditor.gd.uid  ScriptMain.cs  ScriptMain.cs.uid
project/web/: leanclr_web_compiler_boot.js
project/web_compiler/: LeanCLRWebCompiler.staticwebassets.endpoints.json
project/web_compiler/wwwroot/: index.html  index.html.br
project/web_compiler/wwwroot/_framework/: LeanCLRWebCompiler.o4ia67gby0.wasm  LeanCLRWebCompiler.o4ia67gby0.wasm.br  Microsoft.AspNetCore.Components.WebAssembly.xnn5w4atgz.wasm  Microsoft.AspNetCore.Components.WebAssembly.xnn5w4atgz.wasm.br  Microsoft.AspNetCore.Components.jsb9qjjjlf.wasm  Microsoft.AspNetCore.Components.jsb9qjjjlf.wasm.br  System.Collections.Concurrent.u196cf4o0e.wasm  System.Collections.Concurrent.u196cf4o0e.wasm.br  System.Collections.Immutable.tuejvfcggy.wasm  System.Collections.Immutable.tuejvfcggy.wasm.br  System.Collections.NonGeneric.myhvcwhh1b.wasm  System.Collections.NonGeneric.myhvcwhh1b.wasm.br  System.Collections.Specialized.9s1uqq7pzs.wasm  System.Collections.Specialized.9s1uqq7pzs.wasm.br  System.Collections.tlbp6x3y0y.wasm  System.Collections.tlbp6x3y0y.wasm.br  System.ComponentModel.TypeConverter.ci76hnqpaa.wasm  System.ComponentModel.TypeConverter.ci76hnqpaa.wasm.br  System.Console.l1fcvat6lp.wasm  System.Console.l1fcvat6lp.wasm.br  System.Diagnostics.StackTrace.np04mn21qa.wasm  System.Diagnostics.StackTrace.np04mn21qa.wasm.br  System.Diagnostics.Tracing.qip0z5uftq.wasm  System.Diagnostics.Tracing.qip0z5uftq.wasm.br  System.Globalization.hm1y3bl76e.wasm  System.Globalization.hm1y3bl76e.wasm.br  System.IO.Compression.mcrp9kwcbw.wasm  System.IO.Compression.mcrp9kwcbw.wasm.br  System.IO.MemoryMappedFiles.sza7lanycu.wasm  System.IO.MemoryMappedFiles.sza7lanycu.wasm.br  System.Linq.Expressions.seeq3rox58.wasm  System.Linq.Expressions.seeq3rox58.wasm.br  System.Linq.ipqh9opei0.wasm  System.Linq.ipqh9opei0.wasm.br  System.Memory.51fyyajyp4.wasm  System.Memory.51fyyajyp4.wasm.br  System.Net.Http.g4m1o8zw4b.wasm  System.Net.Http.g4m1o8zw4b.wasm.br  System.Private.CoreLib.f4w87aberq.wasm  System.Private.CoreLib.f4w87aberq.wasm.br  (+42 more)
src/: leanclr_hot_reload_host.cpp  leanclr_hot_reload_host.h  leanclr_main_node.cpp  leanclr_main_node.h  leanclr_runtime_bridge.cpp  leanclr_runtime_bridge.h  leanclr_script.cpp  leanclr_script.h  leanclr_script_language.cpp  leanclr_script_language.h  leanclr_script_loader.cpp  leanclr_script_loader.h  leanclr_script_saver.cpp  leanclr_script_saver.h  leanclr_wasm_libcxx_shim.cpp  register_types.cpp  register_types.h
tools/: copy_web_sidecar.sh
tools/LeanCLRWebCompiler/: LeanCLRCompiler.cs  LeanCLRWebCompiler.csproj  Program.cs  README.md
tools/binding_generator/: generate_bindings.py
